@@ -10,6 +10,7 @@ The following bugs have been fixed or resolved on this branch.
 497130  Recognize new DWARF5 DW_LANG constants
 498317  FdBadUse is not a valid CoreError type in a suppression
         even though it's generated by --gen-suppressions=yes
+498143  False positive on EVIOCGRAB ioctl
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
